# docsrs

./: .gitignore  Cargo.toml  README.md  clap.json  clap.json.zst  index  playapi.json  playapi.json.zst
.github/workflows/: publish.yml
src/: doc.rs  error.rs  lib.rs  main.rs
src/doc/: compressed.rs  fetched.rs  indexed.rs  parsed.rs  rawjson.rs  remote.rs
src/doc/indexed/: index.rs  search.rs  search_index.rs
src/doc/parsed/: enums.rs  index.rs  item.rs  structs.rs  traits.rs  unions.rs
