[package]
name = "fuzzdoc"
version = "0.1.1"
edition = "2024"

license = "MIT"
description = "Easily retrieve docs for any crate on crates.io"
repository = "https://github.com/kingananas20/fuzzdoc"
readme = "README.md"
keywords = ["simple", "docs"]
categories = ["api-bindings"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**/*"
]

[dependencies]
fuzzy-matcher = "0.3"
log = "0.4"
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
rustdoc-types = "0.53"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
url = { version = "2.5", optional = true }
zstd = { version = "0.13", optional = true }

[features]
default = ["parse"]
parse = []
decompress = ["parse", "zstd"]
fetch = ["decompress", "reqwest", "url"]

[dev-dependencies]
env_logger = "0.11.8"
