[package]
name = "docsrs"
version = "0.1.6"
edition = "2024"

license = "MIT"
description = "Easily retrieve docs for any crate on crates.io"
repository = "https://github.com/kingananas20/fuzzdoc"
readme = "README.md"
keywords = ["simple", "docs"]
categories = ["api-bindings"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**/*"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
fuzzy-matcher = "0.3"
log = "0.4"
rustdoc-types = "0.53"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "3.0", optional = true }
url = { version = "2.5" }
zstd = { version = "0.13", optional = true }

[features]
default = ["parse"]
parse = []
decompress = ["parse", "zstd"]
fetch = ["decompress", "ureq"]

[dev-dependencies]
env_logger = "0.11.8"
